[package]
name = "generic-subgraph-generator"
version = "1.0.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"

[dependencies]
grapl-graph-descriptions = { path="../../graph-descriptions", version="*"}
grapl-config = {path="../../grapl-config", version="*"}

sqs-executor = { path = "../../sqs-executor/" }
grapl-service = { path = "../../grapl-service/" }
grapl-observe = { path = "../../grapl-observe/" }
lazy_static = "1.2.0"
log = "0"
prost = "0.7"
regex = "1"
rusoto_core = { version="0.46.0", default_features = false, features=["rustls"] }
rusoto_s3 = { version="0.46.0", default_features = false, features=["rustls"] }
rusoto_sqs = { version="0.46.0", default_features = false, features=["rustls"] }
futures = "0.3.*"
aws_lambda_events = "0.4"
async-trait = "0.1.22"
zstd = "0.6"
tokio = { version = "1.*", features = ["sync",  "macros", "time", "rt"] }

tracing = "0.1.15"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2"
eyre = "0.6"
thiserror = "1.0.23"
serde = "1.0.120"
serde_json = "1.0.61"
#openssl-probe = "0.1.2"


[dependencies.uuid]
version = "*"
features = ["v4"]
